# cmd/api/docs/swagger.json
@@ -1801,11 +1801,11 @@
                 }
             }
         },
-        "/user/order/place": {
+        "/user/order/place/{addressid}/{payment}": {
             "post": {
                 "description": "Places an order for the authenticated user based on the selected payment method.",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -1820,14 +1820,14 @@
                         "type": "integer",
                         "description": "Address ID for the order",
                         "name": "addressid",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "Payment method ('cod', 'razorpay', 'wallet')",
                         "name": "payment",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -2209,7 +2209,7 @@
             "post": {
                 "description": "Validates the provided OTP for user signup.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
